# minesolve

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  exampleboard.txt  korv.txt  results.xlsx  test_parameters.py
example-boards/beginner/easy/: 00.txt  01.txt  04.txt  10.txt  13.txt  15.txt  17.txt  19.txt  21.txt  22.txt  23.txt  26.txt  28.txt  30.txt  31.txt  33.txt  35.txt  36.txt  40.txt  41.txt  42.txt  44.txt  45.txt  48.txt
example-boards/beginner/hard/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  43.txt  44.txt  45.txt  46.txt  (+3 more)
example-boards/beginner/medium/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt  (+8 more)
example-boards/expert/easy/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  (+9 more)
example-boards/expert/hard/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  (+10 more)
example-boards/expert/medium/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  (+10 more)
include/: board.h  commands.h  common.h  equations.h  game.h  minesolve.h  permutations.h  probability.h  solutions.h  solver.h  statistics.h
src/: board.c  commands.c  equations.c  game.c  main.c  permutations.c  probability.c  solver.c  statistics.c
src/cli/: commands.c  commands.h  main.c
src/lib/: board.c  equations.c  minesolve.c  permutations.c  probability.c  solutions.c  solver.c
